<resources>
    <string name="app_name">Network Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Network Chat</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_scan_network">Scan Network</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_members">Members</string>
    <string name="menu_group_settings">Group Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>

</resources>
