<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan_network"
            android:icon="@drawable/ic_wifi_black_24dp"
            android:title="@string/menu_scan_network" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_members" />
        <item
            android:id="@+id/nav_group_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_group_settings" />
    </group>

    <item android:title="">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </item>

</menu>
